# AuditOSX-in-termial

./: Cargo.toml  system_resume.json
src/: lib.rs  main.rs
src/audit/: mod.rs
src/privilege/: mod.rs
