[package]
name = "auditax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sysinfo = "0.30.7"
chrono = { version = "0.4.35", features = ["serde"] }
nix = "0.28.0" # Check the latest version
winapi = { version = "0.3", features = ["shellapi"] }